Fix finale tolti errori